// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders as expected 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  collapsable={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgb(202, 0, 0)",
        "borderRadius": 4,
        "justifyContent": "center",
        "padding": 4,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#fff",
          "fontWeight": "bold",
        }
      }
    >
      Google Sign in
    </Text>
  </View>
</View>
`;

exports[`renders as expected while loading 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "rgb(202, 0, 0)",
      "borderRadius": 4,
      "justifyContent": "center",
      "padding": 4,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#fff",
        "fontWeight": "bold",
      }
    }
  >
    Logging in...
  </Text>
</View>
`;
